--- a/a2/Web.config
+++ b/a2/Web.config
@@ -9,8 +9,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-a2-20150319020217.mdf;Initial Catalog=aspnet-a2-20150319020217;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <add name="LookupModel" connectionString="data source=(LocalDb)\v11.0;initial catalog=a2.Models.LookupModel;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\Users.mdf;Initial Catalog=Users;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="LookupTables" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\GoodSamaritan.mdf;Initial Catalog=GoodSamaritan;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
