--- a/a2/a2.csproj
+++ b/a2/a2.csproj
@@ -162,6 +162,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\ClientsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LookupControllers\AbuserRelationshipsController.cs" />
     <Compile Include="Controllers\LookupControllers\AgesController.cs" />
@@ -198,12 +199,21 @@
     <Compile Include="Controllers\SmartLookupControllers\SocialWorkAttendancesController.cs" />
     <Compile Include="Controllers\SmartLookupControllers\ThirdPartyReportsController.cs" />
     <Compile Include="Controllers\SmartLookupControllers\VictimOfIncidentsController.cs" />
+    <Compile Include="Controllers\SmartsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Migrations\201503200004096_LookupInitial.cs" />
     <Compile Include="Migrations\201503200004096_LookupInitial.Designer.cs">
       <DependentUpon>201503200004096_LookupInitial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201504012004426_SmartClient.cs" />
+    <Compile Include="Migrations\201504012004426_SmartClient.Designer.cs">
+      <DependentUpon>201504012004426_SmartClient.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201504012018049_SmartIntoClient.cs" />
+    <Compile Include="Migrations\201504012018049_SmartIntoClient.Designer.cs">
+      <DependentUpon>201504012018049_SmartIntoClient.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\ConfigurationB.cs" />
     <Compile Include="Migrations\ConfigurationA.cs" />
@@ -214,6 +224,14 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Data\GoodSamaritan.mdf" />
+    <Content Include="App_Data\GoodSamaritan_log.ldf">
+      <DependentUpon>GoodSamaritan.mdf</DependentUpon>
+    </Content>
+    <Content Include="App_Data\Users.mdf" />
+    <Content Include="App_Data\Users_log.ldf">
+      <DependentUpon>Users.mdf</DependentUpon>
+    </Content>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\images\belonging.jpg" />
@@ -428,10 +446,18 @@
     <Content Include="Views\Admin\Suspend.cshtml" />
     <Content Include="Views\Admin\Unsuspend.cshtml" />
     <Content Include="Views\Admin\Users.cshtml" />
+    <Content Include="Views\Clients\Create.cshtml" />
+    <Content Include="Views\Clients\Delete.cshtml" />
+    <Content Include="Views\Clients\Details.cshtml" />
+    <Content Include="Views\Clients\Edit.cshtml" />
+    <Content Include="Views\Clients\Index.cshtml" />
+    <Content Include="Views\Smarts\Create.cshtml" />
+    <Content Include="Views\Smarts\Delete.cshtml" />
+    <Content Include="Views\Smarts\Details.cshtml" />
+    <Content Include="Views\Smarts\Edit.cshtml" />
+    <Content Include="Views\Smarts\Index.cshtml" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
@@ -442,6 +468,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201503200004096_LookupInitial.resx">
       <DependentUpon>201503200004096_LookupInitial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201504012004426_SmartClient.resx">
+      <DependentUpon>201504012004426_SmartClient.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201504012018049_SmartIntoClient.resx">
+      <DependentUpon>201504012018049_SmartIntoClient.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
